# Image_Captioning

./: .gitignore  README.md  demo.ipynb  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: cartoon.yaml  flickr.yaml  medicat.yaml
configs/model/: vit_gpt2.yaml
configs/trainer/: default.yaml
src/: evaluate.py  pyproject.toml  run_flickr.ipynb  train.py
src/datamodule/: cartoon.py  flickr.py
src/demo/flickr/2022-12-28_15-37-35/.hydra/: config.yaml  hydra.yaml
src/demo/flickr/2022-12-28_15-37-35/tensorboard/version_0/: events.out.tfevents.1672243992.a2eee58ce2df  hparams.yaml
src/demo/flickr/2022-12-28_19-17-52/: test_results.pickle
src/demo/flickr/2022-12-28_19-17-52/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/demo/flickr/2022-12-28_19-17-52/tensorboard/version_0/: events.out.tfevents.1672255315.25b2b012c7ce  hparams.yaml
src/demo/flickr/2022-12-28_21-27-03/: test_results.pickle
src/demo/flickr/2022-12-28_21-27-03/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/demo/flickr/2022-12-28_21-27-03/tensorboard/version_0/: events.out.tfevents.1672265763.b8a539180e88  hparams.yaml
src/models/: vit_gpt2.py
src/utils/: pylogger.py  pyrootutils.py  rich_utils.py  utils.py
